Finalised notebook - now ready :)

--- a/notebook/live-feed-exercise.ipynb
+++ b/notebook/live-feed-exercise.ipynb
@@ -507,7 +507,7 @@
     }
    },
    "source": [
-    "### Handshakes - What are Ack and Nacks - Why are they used?\n",
+    "### Acknowledgements - What are Ack and Nacks - Why are they used?\n",
     "Acknowledgements are a way to tell the message server that a message was either consumed, or not. Assume a collection of clients on a server listening on a queue, and a message which requires significant processing. One of the clients receives the message, checks resource usage on the server and decides to send a nack as a consequence. The message server could, at that point, decide to send to a failover server for processing (that’s a possible use, anyway)."
    ]
   },
@@ -1775,7 +1775,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -1862,7 +1862,11 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# TODO - Your code below"
@@ -1923,7 +1927,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# TODO - Your code below\n"
