Finalised notebook - now ready :)

--- a/notebook/live-feed-exercise.ipynb
+++ b/notebook/live-feed-exercise.ipynb
@@ -4,23 +4,24 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "<div class='alert alert-success'><b>NOTE:</b>This jupyter notebook is slide enabled. If you have <b>rise</b> installed you will be able to go into the slideshow mode by pressing the slideshow button below.</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
     "# INTRODUCTION TO LIVE DATA FEEDS \n",
     "**via the STOMP PROTOCOL**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<div class='alert alert-success'><b>NOTE:</b>This jupyter notebook is slide enabled. If you have <b>rise</b> installed you will be able to go into the slideshow mode by pressing the slideshow button below.</div>\n",
+    "<img src='./images/rise-slideshow.png'>"
    ]
   },
   {
@@ -47,7 +48,9 @@
     "<div class='alert alert-info'>\n",
     "    Information about the current Network Rail Feeds can be found \n",
     "    <a href='https://wiki.openraildata.com/index.php/About_the_Network_Rail_feeds'><b>here</b></a>\n",
-    "    </div>"
+    "    </div>\n",
+    "    \n",
+    "<img src='./images/nr-feeds.png'>"
    ]
   },
   {
