add warning about multiple listeners

--- a/notebook/live-feed-exercise.ipynb
+++ b/notebook/live-feed-exercise.ipynb
@@ -379,6 +379,19 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<div class='alert alert-danger'>\n",
+    "    <b>WARNING:</b> stomp.py may behave unexpectedly if you set multiple listener specs on one client. Always create a new connection client and then set a new listener.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
@@ -396,7 +409,7 @@
    },
    "outputs": [],
    "source": [
-    "class Listener():\n",
+    "class ConnectionListener():\n",
     "    def __init__(self, mq):\n",
     "        self._mq = mq\n",
     "\n",
@@ -415,7 +428,7 @@
    "outputs": [],
    "source": [
     "c = stomp.Connection()\n",
-    "\n",
+    "Listener_obj = ConnectionListener()\n",
     "c.set_listener('Our Custom Listener', Listener_obj)\n",
     "\n",
     "c.connect(username=NETWORK_RAIL_AUTH['username'],\n",
