--- a/notebook/live-feed-exercise.ipynb
+++ b/notebook/live-feed-exercise.ipynb
@@ -755,12 +755,13 @@
    },
    "outputs": [],
    "source": [
-    "class Listener():\n",
+    "class ConnectionListener():\n",
     "    def __init__(self, mq):\n",
     "        self._mq = mq\n",
     "        self.msg_list = []\n",
     "\n",
     "    def on_message(self, headers, message):\n",
+    "        print(message)\n",
     "        self.msg_list.append(message)\n",
     "        self._mq.ack(id=headers['message-id'], subscription=headers['subscription'])"
    ]
@@ -798,8 +799,8 @@
     }
    ],
    "source": [
-    "username = input('What is your account username?')\n",
-    "password = input('What is your account password?')\n",
+    "username = input('What is your account username? ')\n",
+    "password = input('What is your account password? ')\n",
     "NETWORK_RAIL_AUTH = {'username': username, \n",
     "                     'password': password}\n",
     "\n",
@@ -904,21 +905,21 @@
    "outputs": [],
    "source": [
     "def listen(secs):\n",
-    "    mq = stomp.Connection(host_and_ports=[('datafeeds.networkrail.co.uk', 61618)],\n",
+    "    c = stomp.Connection(host_and_ports=[('datafeeds.networkrail.co.uk', 61618)],\n",
     "                          keepalive=True,\n",
     "                          vhost='datafeeds.networkrail.co.uk',\n",
     "                          heartbeats=(10000, 5000))\n",
     "\n",
-    "    Listener_obj = Listener(mq)\n",
-    "    mq.set_listener('', Listener_obj)\n",
+    "    Listener_obj = ConnectionListener(c)\n",
+    "    c.set_listener('', Listener_obj)\n",
     "\n",
-    "    mq.connect(username=NETWORK_RAIL_AUTH['username'],\n",
+    "    c.connect(username=NETWORK_RAIL_AUTH['username'],\n",
     "               passcode=NETWORK_RAIL_AUTH['password'],\n",
     "               wait=True)\n",
-    "    mq.subscribe('/topic/TD_WESS_SIG_AREA', 'test-td', ack='client-individual')\n",
+    "    c.subscribe('/topic/TD_WESS_SIG_AREA', 'test-td', ack='client-individual')\n",
     "\n",
     "    sleep(secs) # secs\n",
-    "    mq.disconnect()\n",
+    "    c.disconnect()\n",
     "\n",
     "    output = Listener_obj.msg_list\n",
     "\n",
