Add sleep information

--- a/notebook/live-feed-exercise.ipynb
+++ b/notebook/live-feed-exercise.ipynb
@@ -276,6 +276,9 @@
    },
    "source": [
     "```python\n",
+    "# listen to the broker for x seconds\n",
+    "sleep(x)\n",
+    "\n",
     "# Send a message to the broker\n",
     "client.send()\n",
     "\n",
