finalise notebook - now ready

--- a/notebook/live-feed-exercise.ipynb
+++ b/notebook/live-feed-exercise.ipynb
@@ -724,7 +724,7 @@
    "execution_count": 42,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -753,7 +753,7 @@
    "execution_count": 38,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -787,7 +787,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -1843,7 +1843,7 @@
    },
    "outputs": [],
    "source": [
-    "# TODO - Your code below\n"
+    "# TODO - Your code below"
    ]
   },
   {
@@ -1954,7 +1954,7 @@
    },
    "outputs": [],
    "source": [
-    "# TODO - Your code below\n"
+    "# TODO - Your code below"
    ]
   }
  ],
