--- a/notebook/live-feed-exercise.ipynb
+++ b/notebook/live-feed-exercise.ipynb
@@ -868,7 +868,7 @@
     }
    },
    "source": [
-    "You can then run your programme using the follwing command once your argument parser is constructed."
+    "You can then run your programme using the follwing command once your argument parser is constructed"
    ]
   },
   {
